--- a/force-app/main/default/classes/LastDayLeaseExpiryBatch.cls
+++ b/force-app/main/default/classes/LastDayLeaseExpiryBatch.cls
@@ -5,7 +5,7 @@ global class LastDayLeaseExpiryBatch implements Database.Batchable<SObject>,Sche
     }
     global Database.QueryLocator start(Database.BatchableContext context){
         return Database.getQueryLocator([
-            SELECT Id, Name, End_Date__c, Tenant__r.Email__c, Tenant__r.Name 
+            SELECT Id, Name,Terms__c, End_Date__c, Tenant__r.Email__c, Tenant__r.Name 
             FROM Lease_Agreement__c 
             WHERE End_Date__c = :System.today().addDays(1) 
             AND Tenant__r.Email__c != NULL
@@ -18,7 +18,7 @@ global class LastDayLeaseExpiryBatch implements Database.Batchable<SObject>,Sche
             email.setToAddresses(new String[]{lease.Tenant__r.Email__c});
             email.setSubject('Lease Expiry Reminder for ' + lease.Tenant__r.Name);
             String emailBody = 'Dear ' + lease.Tenant__r.Name + ',<br/><br/>' +
-                               'Your lease agreement "' + lease.Name + '" is set to expire on ' + lease.End_Date__c + '.<br/>' +
+                               'Your lease agreement "' + lease.Terms__c + '" is set to expire on ' + lease.End_Date__c + '.<br/>' +
                                'Please take the necessary action to renew or close the agreement.<br/><br/>' +
                                'Thank you,<br/>Real Estate Management Team';
 
